tests/NormalTests/paczka1/small_fuzzy/51715701.err
Error in line 1: NCRtjREDBn A982 59,6
Error in line 14: mMe8u A96 26,3
